Attempt to fix jumping video element

--- a/styles.css
+++ b/styles.css
@@ -57,17 +57,19 @@
   	background-repeat: no-repeat;
   	background-position: center center;
   	margin: 40px 0px 80px 0px;
+    transition: 0.35s;
   }
   
+  .dark-video {
+    display: none;
+  }
+    
   .video {
     height: 610px;
     width: 281px;
     margin-top: 14px;
   	border-radius: 30px;
-  }
-  
-  .dark-video {
-    display: none;
+    transition: 0.35s;
   }
   
   .wrapper {
